[package]
name = "isstran"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.42"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.1.3", features = ["derive"] }
colour = "0.6.0"
